// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevNextBar renders \`null\` when passed a page that isn't in the book tree 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c3 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c1 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c0 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  width: 100%;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 3rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3rem auto;
    border: 0;
  }
}

<div
  className="c0"
  data-analytics-region="prev-next"
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="c1"
    data-analytics-label="next"
    href="books/book-slug-1/pages/test-page-1"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders \`null\` with no page or book 1`] = `null`;

exports[`PrevNextBar renders correctly when you pass a page and book 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c3 {
  height: 2.5rem;
  width: 2.5rem;
}

.c5 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c1 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c4 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c0 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  width: 100%;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 3rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-left: -0.8rem;
  }
}

@media screen and (max-width:75em) {
  .c4 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3rem auto;
    border: 0;
  }
}

<div
  className="c0"
  data-analytics-region="prev-next"
>
  <a
    aria-label="Previous Page"
    className="c1"
    data-analytics-label="prev"
    href="books/book-slug-1/pages/2-test-page-3"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
      />
    </svg>
    Previous
  </a>
  <a
    aria-label="Next Page"
    className="c4"
    data-analytics-label="next"
    href="books/book-slug-1/pages/4-test-page-5"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="c2 c5"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`next\` element correctly 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c3 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c1 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c0 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  width: 100%;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 3rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3rem auto;
    border: 0;
  }
}

<div
  className="c0"
  data-analytics-region="prev-next"
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="c1"
    data-analytics-label="next"
    href="books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`prev\` element correctly 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c3 {
  height: 2.5rem;
  width: 2.5rem;
}

.c1 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c0 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  width: 100%;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 3rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-left: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3rem auto;
    border: 0;
  }
}

<div
  className="c0"
  data-analytics-region="prev-next"
>
  <a
    aria-label="Previous Page"
    className="c1"
    data-analytics-label="prev"
    href="books/book-slug-1/pages/d-glossary-of-key-symbols-and-notation"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
      />
    </svg>
    Previous
  </a>
  <span
    aria-hidden={true}
  />
</div>
`;
